# MCP_1

./: README.md  client.py  config.json  mcp_log  pyproject.toml  requirements.txt
additional/: README.md  agent_langgraph.py  app.py  requirements.txt
additional/config/: prompts.py
additional/faiss_index/: index.faiss  index.pkl
experiments/: 1.ipynb
server/: search.py  summary.py
